# icd10eval

./: .gitignore  Engineering_Handbook_Autonomous_Coding_MVP_v2.docx  README.md  pyproject.toml
.github/workflows/: pages.yml
assets/: epicode-explainer.ass
benchmark/results/: public.json
docs/: ARCHITECTURE.md  CODEX_BUILD.md  DEMO.md  SELF_REVIEW.md  SOURCES.md
episodes/exemplars/: acute-appendicitis.json  acute-cholecystitis.json  acute-diverticulitis.json  feeding-difficulty.json  healthy-newborn.json  infant-diabetic-mother.json  inguinal-hernia.json  neonatal-hypoglycaemia.json  neonatal-jaundice.json  perianal-abscess.json
prompts/: openai_provider_contract.md
schemas/: episode.schema.json
scripts/: build_exemplars.py  build_explainer_video.sh  build_static_site.py  cdp_audit.mjs  cdp_static_smoke.mjs  cdp_video_review.mjs  check.sh  set_api_key.sh  start.sh
src/synthetic_episode_studio/: __init__.py  benchmark.py  generator.py  main.py  models.py  references.py  repository.py  scenarios.py  validator.py
src/synthetic_episode_studio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/synthetic_episode_studio/static/: benchmark-refined.css  benchmark.css  benchmark.js  studio-refined.css  studio.css  studio.js
src/synthetic_episode_studio/templates/: benchmark.html  index.html
tests/: test_api.py  test_benchmark.py  test_generator.py
